@@ -25,7 +25,7 @@
 
           <tr>
             <th i18n:translate="label_group">Group</th>
-            <td class="group" tal:content="team/group/title" />
+            <td class="group" tal:content="team/group/label" />
           </tr>
 
           <tr>
